[gd_scene load_steps=2 format=3 uid="uid://bvv7iey22utop"]

[ext_resource type="Script" path="res://UI/Singleplayer Start Menu/singleplayer_start_menu.gd" id="1_7r6uu"]

[node name="SingleplayerStartMenu" type="Control" groups=["Main Menu Incompatible", "Options Menu Incompatible"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7r6uu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.866667, 0.866667, 0.866667, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 25
text = "X"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2
text = "Bots"

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/HSplitContainer/HSplitContainer2"]
layout_mode = 2
text = "Players"

[node name="GameOptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Bot Count Option" type="HSplitContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/GameOptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/GameOptionsContainer/Bot Count Option"]
layout_mode = 2
size_flags_horizontal = 3
text = "Number of bots"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/GameOptionsContainer/Bot Count Option"]
layout_mode = 2

[node name="PawnSelectConatiner" type="VSplitContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/PawnSelectConatiner"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select your Pawns"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/PawnSelectConatiner"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Start"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HSplitContainer/VSplitContainer/GameOptionsContainer/Bot Count Option/LineEdit" to="." method="_on_line_edit_text_changed"]
